# codex-pr-review

./: README.md
.github/workflows/: pr-review.yaml
example-code/: Cargo.toml  README.md  hotel.db
example-code/src/: db.rs  handlers.rs  main.rs  models.rs  templates.rs
example-code/static/css/: style.css
example-code/static/js/: app.js
example-code/templates/: base.html  booking_confirmation.html  home.html  hotel_detail.html  room_detail.html  search.html
